<resources>
    <string name="app_name">Zello SDK Sample PTT</string>

    <string name="locked">PTT App is locked. Please unlock the app using the sample misc project.</string>

    <string name="audio_speaker">SPEAKER</string>
    <string name="audio_earpiece">EARPIECE</string>
    <string name="audio_bluetooth">BLUETOOTH</string>
    <string name="sign_in_status_offline">Please sign in using the sample sign in project.</string>
    <string name="sign_in_status_signing_in">Signing in\u2026</string>
    <string name="no_selected_contact">Please select an available contact using the sample contact project.</string>
    <string name="unavailable_selected_contact">Contact unavailable. Please select an available contact using the sample contact project.</string>
    <string name="talk_button">Push to talk</string>

    <string name="unmute_contact">Unmute contact</string>
    <string name="mute_contact">Mute contact</string>
    <string name="replay_last_message">Replay last message</string>
    <string name="connect_channel">Connect channel</string>
    <string name="disconnect_channel">Disconnect channel</string>

    <string formatted="false" name="selected_contact">Selected contact: %s</string>

    <string formatted="false" name="receiving_message_channel_author">Receiving message from %s \\ %s</string>
    <string formatted="false" name="receiving_message_sender">Receiving message from %s</string>
    <string formatted="false" name="connecting_to_contact">Connecting to %s</string>
    <string formatted="false" name="outgoing_message_to_contact">Outgoing message to %s</string>
</resources>
