<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.zello.sdk.sample.ptt.PttActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/connectChannelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textOff="@string/connect_channel"
        android:textOn="@string/disconnect_channel" />

    <com.zello.sdk.sample.ptt.SquareButton
        android:id="@+id/pushToTalkButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_talk"
        android:maxHeight="@dimen/talk_button_size"
        android:maxWidth="@dimen/talk_button_size"
        android:text="@string/talk_button"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/audio_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.zello.sdk.sample.ptt.NoToggleButton
                android:id="@+id/audio_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/audio_speaker"
                android:textOn="@string/audio_speaker" />

            <com.zello.sdk.sample.ptt.NoToggleButton
                android:id="@+id/audio_earpiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/audio_earpiece"
                android:textOn="@string/audio_earpiece" />

            <com.zello.sdk.sample.ptt.NoToggleButton
                android:id="@+id/audio_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/audio_bluetooth"
                android:textOn="@string/audio_bluetooth" />
        </LinearLayout>

        <TextView
            android:id="@+id/messageStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/selectedContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>
